[project]
name = "vikram-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Navkant Tyagi",email = "navkant.tyagi9@gmail.com"}
]
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "wikipedia (>=1.4.0,<2.0.0)",
    "mcp (>=1.26.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "vikram"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
